--- a/src/lang/resources.en.json
+++ b/src/lang/resources.en.json
@@ -1,5 +1,3 @@
 {
-  "copyright-author": "Juan Cuartas",
-  "copyright-text": "Copyright ©",
-  "copyright-url": "https://github.com/equisoide/react-mui-ts-template/blob/main/LICENSE"
+  "hello-world": "Hello World!"
 }
