--- a/src/stories/introduction.stories.mdx
+++ b/src/stories/introduction.stories.mdx
@@ -114,7 +114,8 @@ import StackAlt from './assets/stackalt.svg';
   `}
 </style>
 
-# Welcome to Storybook
+<h1>{process.env.REACT_APP_PACKAGE_NAME}</h1>
+<h2>{process.env.REACT_APP_PACKAGE_VERSION}</h2>
 
 Storybook helps you build UI components in isolation from your app's business logic, data, and context.
 That makes it easy to develop hard-to-reach states. Save these UI states as **stories** to revisit during development, testing, or QA.
